cmake_minimum_required(VERSION 3.5)
project(mocap_control)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_lifecycle REQUIRED)
find_package(mocap_msgs REQUIRED)

set(dependencies
  rclcpp
  rclcpp_lifecycle
  mocap_msgs
)

include_directories(include)

add_library(${PROJECT_NAME} SHARED
  src/mocap_control/ControlledNode.cpp
  src/mocap_control/ControlledLifecycleNode.cpp
  src/mocap_control/ControllerNode.cpp
)
ament_target_dependencies(${PROJECT_NAME} ${dependencies})

add_executable(start
  src/start.cpp
)
ament_target_dependencies(start ${dependencies})
target_link_libraries(start ${PROJECT_NAME})

install(DIRECTORY include/
  DESTINATION include/
)

install(TARGETS
  ${PROJECT_NAME}
  start
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()

  find_package(ament_cmake_gtest REQUIRED)
  add_subdirectory(test)
endif()

ament_package()
